[package]
name = "types_3gpp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1-codecs = "0.6.1"
asn1_codecs_derive = "0.6.1"
bitvec = { version = "1.0.1", features = ["serde"] }
env_logger = "0.11.2"
hex = "0.4.3"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
