[package]
name = "types_lte_3gpp"
version = "1.0.1"
edition = "2021"
license = "MIT"
authors = [
    "n4n5 <its.just.n4n5@gmail.com>",
    "Sacha Di Costanzo <sacha.dicostanzo@telecom-paris.fr>",
    "katheleligaf",
    "comeyrd <ce.eyraud@gmail.com>",
]
description = "3GPP types for Rust"
repository = "https://github.com/tramex/types_3gpp"
homepage = "https://github.com/tramex/types_3gpp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1-codecs = "0.6.1"
asn1_codecs_derive = "0.6.1"
bitvec = { version = "1.0.1", features = ["serde"] }
env_logger = "0.11.2"
hex = "0.4.3"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
